Removed usage of sun.misc.BASE64Encoder for java9 compatibility